--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
-DB_HOST=localhost
-DB_USER=postgres
-DB_PASSWORD=postgres
-DB_NAME=loja
+DB_HOST=dpg-d1pc3kbipnbc73ft7f10-a
+DB_USER=loja_146m_user
+DB_PASSWORD=55OBffFbqHtovJoLkMBZC5O1AgJtVpjQ
+DB_NAME=loja_146m
 DB_PORT=5432
