--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
-DB_HOST=dpg-d1pc3kbipnbc73ft7f10-a
-DB_USER=loja_146m_user
-DB_PASSWORD=55OBffFbqHtovJoLkMBZC5O1AgJtVpjQ
-DB_NAME=loja_146m
+DB_HOST=dpg-d1pdl4k9c44c738hiq4g-a
+DB_USER=bd_t8zk_user
+DB_PASSWORD=ECmxdFGcj15LoBFMryIlAw8CKIREQQ9k
+DB_NAME=bd_t8zk
 DB_PORT=5432
