--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
-DB_HOST=dpg-d1pdl4k9c44c738hiq4g-a
-DB_USER=bd_t8zk_user
-DB_PASSWORD=ECmxdFGcj15LoBFMryIlAw8CKIREQQ9k
-DB_NAME=bd_t8zk
+DB_HOST=dpg-d1pdsr7fte5s73c8t1qg-a
+DB_USER=bd_8hb0_user
+DB_PASSWORD=qDRU6CMG7oV0xYcm0JPsBwUT3kNq2uBG
+DB_NAME=bd_8hb0
 DB_PORT=5432
